jellyfin/overlays/jern.fi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: nginx
  tls:
  - secretName: jellyfin-fi-cert
    hosts:
    - jellyfin.jern.fi
  rules:
  - host: jellyfin.jern.fi
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: http
        path: /
        pathType: Prefix
